player name feature finished
